<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_connextdds_common</name>
  <version>0.1.0</version>
  <description>Common source code shared by RMWs built with RTI Connext DDS</description>
  <maintainer email="asorbini@rti.com">Andrea Sorbini</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rti_connext_dds_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
